tests/sksl/errors/ReservedNameAsm.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'asm'
1 error
